--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Curso Alura</title>
+<title>Cursos Alura</title>
 </head>
 <body>
 	<ul>
 		<li>Vagrant</li>
-		<li>Docker</li>
+		<li>Docker: Crinado Containers sem dor de cabeça</li>
 		<li>Ansible</li>
 		<li>Integração Contínua</li>
 	</ul>
